# stm32xxxx

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
board-support/: .cproject  .mxproject  .project  board-support.ioc
board-support/Core/Inc/: bsp_main.h  main.h  main.h.bak  stm32u5xx_hal_conf.h
board-support/Core/Src/: bsp_main.c  gpio.c  main.c  main.c.bak  stm32u5xx_hal_msp.c  usb_otg.c
cmake/: cpu-params.cmake
cubemx-gen-scripts/: README.md  config.sh  post-gen-script.sh
cubemx-gen-scripts/tasks/: bsp-main.sh  entry.sh  error-handler.sh  main.sh
cubemx-gen-scripts/utils/: dir_checks.sh  errors.sh
debug-files/: README.md
include/: error_handler.h  main.h
src/: error_handler.c  main.c
